# kanaPractice

./: .gitignore  BuildMap.cpp  BuildMap.h  CMakeLists.txt  CMakeLists.txt.bard  Score.cpp  Score.h  common.cpp  common.h  kanaExam.cpp  kanas.cpp  kanas.h  makefile  mapping
